Project

General

Profile

Actions

Bug #50556

closed

Reproducible crash on multipart upload to bucket with policy

Added by René Højbjerg Larsen almost 3 years ago. Updated almost 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Or Friedmann
Target version:
% Done:

0%

Source:
Community (user)
Tags:
multipart policy
Backport:
pacific
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):

8c23946311f29e1f658aafdf6fdde6cda1f21a8f422dbc9191ff6fe86aff390c

Crash signature (v2):

Description

Hi,

We recently upgraded our small (4 node) production cluster from Nautilus to Pacific, and started seeing RadosGW crashes:

{
"backtrace": [
"/lib/x86_64-linux-gnu/libc.so.6(+0x3f040) [0x7f9b20524040]",
"(rgw_bucket::rgw_bucket(rgw_bucket const&)+0x1b) [0x7f9b210c8e2b]",
"(RGWInitMultipart::verify_permission(optional_yield)+0x82) [0x7f9b214473e2]",
"(rgw_process_authenticated(RGWHandler_REST*, RGWOp*&, RGWRequest*, req_state*, optional_yield, bool)+0xd38) [0x7f9b210a1048]",
"(process_request(rgw::sal::RGWRadosStore*, RGWREST*, RGWRequest*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, rgw::auth::StrategyRegistry const&, RGWRestfulIO*, OpsLogSocket*, optional_yield, rgw::dmclock::Scheduler*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, int)+0x3609) [0x7f9b210a68b9]",
"(RGWCivetWebFrontend::process(mg_connection*)+0x269) [0x7f9b20fc01f9]",
"/usr/lib/libradosgw.so.2(+0x640b62) [0x7f9b21186b62]",
"/usr/lib/libradosgw.so.2(+0x6427ef) [0x7f9b211887ef]",
"/usr/lib/libradosgw.so.2(+0x642ca8) [0x7f9b21188ca8]",
"/lib/x86_64-linux-gnu/libpthread.so.0(+0x76db) [0x7f9b14db36db]",
"clone()"
],
"ceph_version": "16.2.1",
"crash_id": "2021-04-27T16:13:55.804495Z_b4b18ecf-9408-4e8b-9781-ae8c1918cede",
"entity_name": "client.rgw.ceph4.rgw0",
"os_id": "ubuntu",
"os_name": "Ubuntu",
"os_version": "18.04.5 LTS (Bionic Beaver)",
"os_version_id": "18.04",
"process_name": "radosgw",
"stack_sig": "8c23946311f29e1f658aafdf6fdde6cda1f21a8f422dbc9191ff6fe86aff390c",
"timestamp": "2021-04-27T16:13:55.804495Z",
"utsname_hostname": "ceph4",
"utsname_machine": "x86_64",
"utsname_release": "5.4.0-72-generic",
"utsname_sysname": "Linux",
"utsname_version": "#80~18.04.1-Ubuntu SMP Mon Apr 12 23:26:25 UTC 2021"
}

We tracked it down, and it happens whenever we attempt a multipart upload to a bucket, that has a bucket policy set. Any policy on the bucket, even a trivial (empty) one, triggers the crash. Regular (non-multipart) uploads work fine.


Related issues 3 (1 open2 closed)

Has duplicate rgw - Bug #51377: rgw: daemon crash when using both s3 bucket acl and s3 bucket policyDuplicate

Actions
Has duplicate rgw - Bug #51574: Segfault when uploading fileFix Under ReviewDaniel Gryniewicz

Actions
Copied to rgw - Backport #51001: pacific: Reproducible crash on multipart upload to bucket with policyResolvedCory SnyderActions
Actions #1

Updated by Or Friedmann almost 3 years ago

  • Assignee set to Or Friedmann
Actions #2

Updated by Or Friedmann almost 3 years ago

  • Status changed from New to Fix Under Review
  • Backport set to pacific
  • Pull request ID set to 41288
Actions #3

Updated by Or Friedmann almost 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #51001: pacific: Reproducible crash on multipart upload to bucket with policy added
Actions #5

Updated by Loïc Dachary almost 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions #6

Updated by Daniel Gryniewicz almost 3 years ago

  • Has duplicate Bug #51377: rgw: daemon crash when using both s3 bucket acl and s3 bucket policy added
Actions #7

Updated by Daniel Gryniewicz almost 3 years ago

  • Has duplicate Bug #51574: Segfault when uploading file added
Actions

Also available in: Atom PDF