rgw: crash on multipart upload to bucket with policy

crash on multipart upload to bucket with policy
Fixes: https://tracker.ceph.com/issues/50556

Signed-off-by: Or Friedmann <ofriedma@redhat.com>
Resolves: rhbz#1960262

Conflicts: Changed !rgw::sal::Object::empty(s->object.get()) to !rgw::sal::RGWObject::empty(s->object.get())

(cherry picked from commit 413b23a5483d1feb5ea087ee96bd31b14bc0a285)